Paused padding/spacing fixes

--- a/chitrac-ng/src/app/efficiency-screens/efficiency-screen-lane/efficiency-screen-lane.component.scss
+++ b/chitrac-ng/src/app/efficiency-screens/efficiency-screen-lane/efficiency-screen-lane.component.scss
@@ -38,10 +38,12 @@
 }
 
 .lane-stop-bg {
-  background-color: var(--sg-color-blue-gray-medium-200);
+  background-color: var(--sg-color-blue-gray-light-200);
 
   .lane-inner {
     background-color: var(--sg-color-blue-gray-medium-300);
+    padding:0 !important;
+    margin:10px !important;
   }
 }
 
